Installed Mediatr. Added Beers request and response in ApplicationServices. Added BeersController in WebAPI.

--- a/BeerCup.ApplicationServices/BeerCup.ApplicationServices.csproj
+++ b/BeerCup.ApplicationServices/BeerCup.ApplicationServices.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="API\Handlers\" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BeerCup.DataAccess\BeerCup.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
