--- a/BeerCup.WebAPI/BeerCup.WebAPI.csproj
+++ b/BeerCup.WebAPI/BeerCup.WebAPI.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.6">
       <PrivateAssets>all</PrivateAssets>
@@ -19,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BeerCup.ApplicationServices\BeerCup.ApplicationServices.csproj" />
     <ProjectReference Include="..\BeerCup.DataAccess\BeerCup.DataAccess.csproj" />
   </ItemGroup>
 
