--- a/BeerCup.WebAPI/appsettings.json
+++ b/BeerCup.WebAPI/appsettings.json
@@ -8,7 +8,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-
     "BeerCupDatabaseConnectionString": "Data Source=.\\SQLEXPRESS;Initial Catalog=BeerCupStorage;Persist Security Info=True;User ID=sa;Password=sysadmin1."
+  },
+  "OpenWeather": {
+    "BaseUrl": "http://api.openweathermap.org/",
+    "ApiKey": "454ce3ea3a7d8598716092669a3f3db6"
   }
 }
