--- a/BeerCup/BeerCup/BeerCup.csproj
+++ b/BeerCup/BeerCup/BeerCup.csproj
@@ -26,4 +26,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\BeerCup.DataAccess\BeerCup.DataAccess.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\MainView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
