--- a/BeerCup/BeerCup.Android/BeerCup.Android.csproj
+++ b/BeerCup/BeerCup.Android/BeerCup.Android.csproj
@@ -98,4 +98,9 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionBeerCupAndroidHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
