--- a/BeerCup.Mobile/BeerCup.Mobile/BeerCup.Mobile.csproj
+++ b/BeerCup.Mobile/BeerCup.Mobile/BeerCup.Mobile.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Forms.MultiSelectListView" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
