--- a/BeerCup.Mobile/BeerCup.Mobile/BeerCup.Mobile.csproj
+++ b/BeerCup.Mobile/BeerCup.Mobile/BeerCup.Mobile.csproj
@@ -48,6 +48,9 @@
     <EmbeddedResource Update="Views\MenuView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\RegisterView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
 	<EmbeddedResource Update="Views\VoterHistoryView.xaml">
 		<Generator>MSBuild:UpdateDesignTimeXaml</Generator>
 	</EmbeddedResource>
