--- a/BeerCup.Mobile/BeerCup.Mobile/BeerCup.Mobile.csproj
+++ b/BeerCup.Mobile/BeerCup.Mobile/BeerCup.Mobile.csproj
@@ -54,6 +54,9 @@
     <EmbeddedResource Update="Views\RegisterView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ResultsCatalogView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ResultsView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
