--- a/BeerCup.Mobile/BeerCup.Mobile.Android/BeerCup.Mobile.Android.csproj
+++ b/BeerCup.Mobile/BeerCup.Mobile.Android/BeerCup.Mobile.Android.csproj
@@ -56,6 +56,9 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Google.Android.Material">
+      <Version>1.3.0.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
